add first deserializer (JWT)

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,3 +16,7 @@ setup-hooks =
 [entry_points]
 jot_crypto_wrappers =
     ^HS\d+$ = jot.crypto.hmac_wrapper:HMACWrapper
+jot_deserializers =
+    JWT = jot.deserialize.jwt_deserializer:deserialize_jwt
+jot_default_deserializer =
+    default = jot.deserialize.jws_deserializer:deserialize_jws
