--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ setup-hooks =
 
 [entry_points]
 jot_crypto_wrappers =
-    ^HS\d+$ = jot.crypto.hmac_wrapper:HMACWrapper
+    ^HS\d+$ = jot.crypto_wrappers.hmac_wrapper:HMACWrapper
 jot_deserializers =
     JWT = jot.deserialize.jwt_deserializer:deserialize_jwt
 jot_default_deserializer =
