move 'deserialize' to 'deserializers'

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,6 @@ setup-hooks =
 jot_crypto_wrappers =
     ^HS\d+$ = jot.crypto_wrappers.hmac_wrapper:HMACWrapper
 jot_deserializers =
-    JWT = jot.deserialize.jwt_deserializer:deserialize_jwt
+    JWT = jot.deserializers.jwt_deserializer:deserialize_jwt
 jot_default_deserializer =
-    default = jot.deserialize.jws_deserializer:deserialize_jws
+    default = jot.deserializers.jws_deserializer:deserialize_jws
