add RSxxx signing support

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,7 @@ setup-hooks =
 [entry_points]
 jot_crypto_wrappers =
     ^HS\d+$ = jot.crypto_wrappers.hmac_wrapper:HMACWrapper
+    ^RS\d+$ = jot.crypto_wrappers.rs_wrapper:RSWrapper
 jot_deserializers =
     JWT = jot.deserializers.jwt_deserializer:deserialize_jwt
 jot_default_deserializer =
