--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ setup-hooks =
 
 [entry_points]
 jot_crypto_wrappers =
-    ^HS\d+$ = jot.crypto_wrappers.hmac_wrapper:HMACWrapper
+    ^HS\d+$ = jot.crypto_wrappers.hs_wrapper:HSWrapper
     ^RS\d+$ = jot.crypto_wrappers.rs_wrapper:RSWrapper
 jot_deserializers =
     JWT = jot.deserializers.jwt_deserializer:deserialize_jwt
