--- a/setup.cfg
+++ b/setup.cfg
@@ -14,9 +14,9 @@ setup-hooks =
     pbr.hooks.setup_hook
 
 [entry_points]
-jot_crypto_wrappers =
-    ^HS\d+$ = jot.crypto_wrappers.hs_wrapper:HSWrapper
-    ^RS\d+$ = jot.crypto_wrappers.rs_wrapper:RSWrapper
+jot_signers =
+    ^HS\d+$ = jot.signers.hmac_signer:HMACSigner
+    ^RS\d+$ = jot.signers.rsa_signer:RSASigner
 jot_deserializers =
     JWT = jot.deserializers.jwt_deserializer:deserialize_jwt
 jot_default_deserializer =
