--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ setup-hooks =
 jot_signers =
     ^HS\d+$ = jot.signers.hmac_signer:HMACSigner
     ^RS\d+$ = jot.signers.rsa_signer:RSASigner
+jot_ciphers =
+    ^A\d+CBC-HS\d+$ = jot.ciphers.aes_cbc:AESCBCCipher
 jot_deserializers =
     JWT = jot.deserializers.jwt_deserializer:deserialize_jwt
-jot_default_deserializer =
-    default = jot.deserializers.jws_deserializer:deserialize_jws
