add JWE skeleton
This skeleton can round trip, but is probably encoding the
payload/header wrong before encryption.

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,8 +14,10 @@ setup-hooks =
     pbr.hooks.setup_hook
 
 [entry_points]
-jot_ciphers =
-    ^A\d+CBC-HS\d+$ = jot.ciphers.aes_cbc:AESCBCCipher
+jot_alg_ciphers =
+    ^RSA1_5$ = jot.alg_ciphers.rsa1_5:RSA1_5Cipher
+jot_enc_ciphers =
+    ^A\d+CBC-HS\d+$ = jot.enc_ciphers.aes_cbc:AesCbcCipher
 jot_signers =
     ^HS\d+$ = jot.signers.hmac_signer:HMACSigner
     ^RS\d+$ = jot.signers.rsa_signer:RSASigner
