add AxxxKW alg cipher

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,7 @@ setup-hooks =
 [entry_points]
 jot_alg_ciphers =
     ^RSA1_5$ = jot.alg_ciphers.rsa1_5:RSA1_5Cipher
+    ^A\d+KW$ = jot.alg_ciphers.aes_keywrap:AesKeywrapCipher
 jot_enc_ciphers =
     ^A\d+CBC-HS\d+$ = jot.enc_ciphers.aes_cbc:AesCbcCipher
 jot_signers =
